--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
             <h1>
                 <div class="translate"><span class="greeting japanese">はじめまして､</span><span class="greeting english">Nice
                         to meet you,</span>
-                </div>My name is Kotomi
+                </div>I'm Kotomi
                 Cogdill.
             </h1>
             Billingual &#127471;&#127477;&#127482;&#127480;
-            UX/UI designer based in the SF Bay Area.<br>
-
+            UX/UI designer based in the SF Bay Area.
             Creating visually aesthetic designs that bring users <br>
             happy experience is my new <a class="link" href="https://en.wikipedia.org/wiki/Ikigai">ikigai</a>.<br>
 
@@ -68,49 +67,60 @@
     <div class="work">
 
         <div class="content-home">
-            <h1>Work</h1>
+            <h2>Case Studies</h2>
 
 
-
-            <div class="imgs">
-                <a href="all-about-matcha.html">
-                    <div class="work-rectangle">
-                        <div class="work-rectangle-content">
-                            <svg width="177" height="64" viewBox="0 0 97 35" fill="none" xmlns="http://www.w3.org/2000/svg"
-                                class="work-logo">
-                                <path d="M16 8H2V22" stroke="#4C4949" stroke-width="3" />
-                                <path d="M95 19V33C83.1145 33 92.8855 33 81 33" stroke="#4C4949" stroke-width="3" />
-                                <path
-                                    d="M15.704 14.984H18.296V16.976C18.648 16.224 19.16 15.656 19.832 15.272C20.52 14.888 21.304 14.696 22.184 14.696C24.152 14.712 25.36 15.392 25.808 16.736C26.16 16.112 26.688 15.616 27.392 15.248C28.096 14.88 28.84 14.696 29.624 14.696C30.776 14.696 31.648 14.92 32.24 15.368C32.832 15.8 33.224 16.424 33.416 17.24C33.624 18.04 33.728 19.12 33.728 20.48V26H31.112V20.456C31.112 19.16 30.976 18.232 30.704 17.672C30.448 17.112 29.944 16.832 29.192 16.832C28.184 16.832 27.416 17.176 26.888 17.864C26.376 18.536 26.12 19.424 26.12 20.528V26H23.528V20.072C23.528 19.224 23.496 18.592 23.432 18.176C23.368 17.76 23.192 17.432 22.904 17.192C22.616 16.952 22.152 16.832 21.512 16.832C20.952 16.832 20.424 17 19.928 17.336C19.448 17.672 19.056 18.128 18.752 18.704C18.464 19.264 18.32 19.872 18.32 20.528V26H15.704V14.984ZM37.2241 14.984H39.9121V26H37.2241V14.984ZM38.5441 12.92C38.0481 12.92 37.6321 12.752 37.2961 12.416C36.9601 12.08 36.7921 11.664 36.7921 11.168C36.7921 10.72 36.9601 10.336 37.2961 10.016C37.6321 9.696 38.0481 9.536 38.5441 9.536C39.0241 9.536 39.4321 9.696 39.7681 10.016C40.1041 10.336 40.2721 10.72 40.2721 11.168C40.2721 11.664 40.1041 12.08 39.7681 12.416C39.4481 12.752 39.0401 12.92 38.5441 12.92ZM43.4289 14.984H46.0209V17.144C46.2769 16.408 46.6929 15.816 47.2689 15.368C47.8449 14.92 48.5009 14.696 49.2369 14.696C49.7489 14.696 50.1009 14.744 50.2929 14.84L49.9329 17.456C49.7889 17.36 49.4769 17.312 48.9969 17.312C48.2449 17.312 47.5569 17.552 46.9329 18.032C46.3249 18.512 46.0209 19.28 46.0209 20.336V26H43.4289V14.984ZM52.0539 14.984H54.6459V17.144C54.9019 16.408 55.3179 15.816 55.8939 15.368C56.4699 14.92 57.1259 14.696 57.8619 14.696C58.3739 14.696 58.7259 14.744 58.9179 14.84L58.5579 17.456C58.4139 17.36 58.1019 17.312 57.6219 17.312C56.8699 17.312 56.1819 17.552 55.5579 18.032C54.9499 18.512 54.6459 19.28 54.6459 20.336V26H52.0539V14.984ZM65.8869 26.24C64.7509 26.24 63.7429 25.984 62.8629 25.472C61.9829 24.96 61.3029 24.264 60.8229 23.384C60.3429 22.504 60.1029 21.528 60.1029 20.456C60.1029 19.4 60.3349 18.432 60.7989 17.552C61.2789 16.672 61.9589 15.976 62.8389 15.464C63.7189 14.952 64.7349 14.696 65.8869 14.696C67.0389 14.696 68.0469 14.952 68.9109 15.464C69.7909 15.976 70.4629 16.672 70.9269 17.552C71.4069 18.432 71.6469 19.4 71.6469 20.456C71.6469 21.528 71.4069 22.504 70.9269 23.384C70.4469 24.264 69.7669 24.96 68.8869 25.472C68.0229 25.984 67.0229 26.24 65.8869 26.24ZM65.9589 24.128C66.8869 24.128 67.6149 23.784 68.1429 23.096C68.6869 22.408 68.9589 21.544 68.9589 20.504C68.9589 19.464 68.6709 18.592 68.0949 17.888C67.5189 17.168 66.7589 16.808 65.8149 16.808C64.9029 16.808 64.1669 17.16 63.6069 17.864C63.0629 18.568 62.7909 19.448 62.7909 20.504C62.7909 21.528 63.0869 22.392 63.6789 23.096C64.2709 23.784 65.0309 24.128 65.9589 24.128ZM74.3429 14.984H76.9349V17.144C77.1909 16.408 77.6069 15.816 78.1829 15.368C78.7589 14.92 79.4149 14.696 80.1509 14.696C80.6629 14.696 81.0149 14.744 81.2069 14.84L80.8469 17.456C80.7029 17.36 80.3909 17.312 79.9109 17.312C79.1589 17.312 78.4709 17.552 77.8469 18.032C77.2389 18.512 76.9349 19.28 76.9349 20.336V26H74.3429V14.984Z"
-                                    fill="#4C4949" />
-                            </svg>
-                            <img class="work-image" src="img/safari.png" alt="Mirror e-commerce website">
-                        </div>
-                    </div>
-                    <div class="work-text">Mirror – Clothing e-commerce website</div>
-                </a>
-                
+            <div class="case-study">
                 <a href="Brightwheel.html">
-                    <div class="work-rectangle">
-                        <div class="work-rectangle-content">
-                            <svg width="177" height="64" viewBox="0 0 97 35" fill="none" xmlns="http://www.w3.org/2000/svg"
-                                class="work-logo">
-                                <path d="M16 8H2V22" stroke="#4C4949" stroke-width="3" />
-                                <path d="M95 19V33C83.1145 33 92.8855 33 81 33" stroke="#4C4949" stroke-width="3" />
-                                <path
-                                    d="M15.704 14.984H18.296V16.976C18.648 16.224 19.16 15.656 19.832 15.272C20.52 14.888 21.304 14.696 22.184 14.696C24.152 14.712 25.36 15.392 25.808 16.736C26.16 16.112 26.688 15.616 27.392 15.248C28.096 14.88 28.84 14.696 29.624 14.696C30.776 14.696 31.648 14.92 32.24 15.368C32.832 15.8 33.224 16.424 33.416 17.24C33.624 18.04 33.728 19.12 33.728 20.48V26H31.112V20.456C31.112 19.16 30.976 18.232 30.704 17.672C30.448 17.112 29.944 16.832 29.192 16.832C28.184 16.832 27.416 17.176 26.888 17.864C26.376 18.536 26.12 19.424 26.12 20.528V26H23.528V20.072C23.528 19.224 23.496 18.592 23.432 18.176C23.368 17.76 23.192 17.432 22.904 17.192C22.616 16.952 22.152 16.832 21.512 16.832C20.952 16.832 20.424 17 19.928 17.336C19.448 17.672 19.056 18.128 18.752 18.704C18.464 19.264 18.32 19.872 18.32 20.528V26H15.704V14.984ZM37.2241 14.984H39.9121V26H37.2241V14.984ZM38.5441 12.92C38.0481 12.92 37.6321 12.752 37.2961 12.416C36.9601 12.08 36.7921 11.664 36.7921 11.168C36.7921 10.72 36.9601 10.336 37.2961 10.016C37.6321 9.696 38.0481 9.536 38.5441 9.536C39.0241 9.536 39.4321 9.696 39.7681 10.016C40.1041 10.336 40.2721 10.72 40.2721 11.168C40.2721 11.664 40.1041 12.08 39.7681 12.416C39.4481 12.752 39.0401 12.92 38.5441 12.92ZM43.4289 14.984H46.0209V17.144C46.2769 16.408 46.6929 15.816 47.2689 15.368C47.8449 14.92 48.5009 14.696 49.2369 14.696C49.7489 14.696 50.1009 14.744 50.2929 14.84L49.9329 17.456C49.7889 17.36 49.4769 17.312 48.9969 17.312C48.2449 17.312 47.5569 17.552 46.9329 18.032C46.3249 18.512 46.0209 19.28 46.0209 20.336V26H43.4289V14.984ZM52.0539 14.984H54.6459V17.144C54.9019 16.408 55.3179 15.816 55.8939 15.368C56.4699 14.92 57.1259 14.696 57.8619 14.696C58.3739 14.696 58.7259 14.744 58.9179 14.84L58.5579 17.456C58.4139 17.36 58.1019 17.312 57.6219 17.312C56.8699 17.312 56.1819 17.552 55.5579 18.032C54.9499 18.512 54.6459 19.28 54.6459 20.336V26H52.0539V14.984ZM65.8869 26.24C64.7509 26.24 63.7429 25.984 62.8629 25.472C61.9829 24.96 61.3029 24.264 60.8229 23.384C60.3429 22.504 60.1029 21.528 60.1029 20.456C60.1029 19.4 60.3349 18.432 60.7989 17.552C61.2789 16.672 61.9589 15.976 62.8389 15.464C63.7189 14.952 64.7349 14.696 65.8869 14.696C67.0389 14.696 68.0469 14.952 68.9109 15.464C69.7909 15.976 70.4629 16.672 70.9269 17.552C71.4069 18.432 71.6469 19.4 71.6469 20.456C71.6469 21.528 71.4069 22.504 70.9269 23.384C70.4469 24.264 69.7669 24.96 68.8869 25.472C68.0229 25.984 67.0229 26.24 65.8869 26.24ZM65.9589 24.128C66.8869 24.128 67.6149 23.784 68.1429 23.096C68.6869 22.408 68.9589 21.544 68.9589 20.504C68.9589 19.464 68.6709 18.592 68.0949 17.888C67.5189 17.168 66.7589 16.808 65.8149 16.808C64.9029 16.808 64.1669 17.16 63.6069 17.864C63.0629 18.568 62.7909 19.448 62.7909 20.504C62.7909 21.528 63.0869 22.392 63.6789 23.096C64.2709 23.784 65.0309 24.128 65.9589 24.128ZM74.3429 14.984H76.9349V17.144C77.1909 16.408 77.6069 15.816 78.1829 15.368C78.7589 14.92 79.4149 14.696 80.1509 14.696C80.6629 14.696 81.0149 14.744 81.2069 14.84L80.8469 17.456C80.7029 17.36 80.3909 17.312 79.9109 17.312C79.1589 17.312 78.4709 17.552 77.8469 18.032C77.2389 18.512 76.9349 19.28 76.9349 20.336V26H74.3429V14.984Z"
-                                    fill="#4C4949" />
-                            </svg>
-                            <img class="work-image" src="img/safari.png" alt="Mirror e-commerce website">
-                        </div>
-                    </div>
-                    <div class="work-text">Mirror – Clothing e-commerce website</div>
+
+
+
+                    <img class="case-study-image" src="img/Mock up brightwheel.png" alt="Brightwheel, add a feature project">
+
                 </a>
+
+                <div>
+                    <div class="title-shurui">STUDENT PROJECT</div>
+                    <div class="case-study-title">Brightwheel</div>
+                    Adding a new parent-parent messaging feature to an existing childcare app, Brightwheel.
+                    <div><a class="case-study-cta case-study-cta-button" href="Brightwheel.html">View  case study</a></div>
+                </div>
+
+
+
+            </div>
+
+
+            <div class="case-study">
+                <a href="all-about-matcha.html">
+
+
+
+                    <img class="case-study-image" src="img/Matcha mock up.png" alt="All about matcha, e-commerce website">
+
+                </a>
+
+                <div>
+                    <div class="title-shurui">STUDENT PROJECT</div>
+                    <div class="case-study-title">All About Matcha</div>
+                    A responsive e-commerce website that provides online Japanese Tea Ceremony classes and matcha products.
+                    <div><a class="case-study-cta case-study-cta-button" href="all-about-matcha.html">View  case study</a></div>
+                </div>
+
+
+
             </div>
 
 
 
+
+
+    
         </div>
+
+
+
+    </div>
 
 
 
@@ -130,7 +140,7 @@
     <div class="footer-green">
 
         <div class="content-home">
-            <div class="socialmedia">
+            <div class="socialmedia-main">
 
                 <a class="icon" href="https://www.linkedin.com/in/kotomitcogdill/"><svg viewBox="0 0 40 40"
                         xmlns="http://www.w3.org/2000/svg">
