--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
         </div>
 
     </div>
-    <footer> <small>&copy; Hand-crafted by Kotomi</small> </footer> 
+    <footer> <small>Hand-crafted by Kotomi</small> </footer> 
 
 </body>
 
