--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div>
                     <div class="title-shurui">STUDENT PROJECT</div>
                     <div class="case-study-title">Brightwheel</div>
-                    Adding a new parent-parent messaging feature to an existing childcare app, Brightwheel.
+                    Adding a new parent-parent messaging feature to an existing childcare app.
                     <div><a class="case-study-cta case-study-cta-button" href="Brightwheel.html">View  case study</a></div>
                 </div>
 
@@ -172,7 +172,7 @@
             </div>
 
         </div>
-        <footer> <small>&copy; Hand-crafted by Kotomi</small> </footer> 
+        <footer> <small> Hand-crafted by Kotomi</small> </footer> 
 
     </div>
 
