--- a/work.html
+++ b/work.html
@@ -136,7 +136,7 @@
 
         </div>
 
-        <footer> <small>&copy; Hand-crafted by Kotomi</small> </footer> 
+        <footer> <small> Hand-crafted by Kotomi</small> </footer> 
 
     </div>
 
