--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <script src="https://kit.fontawesome.com/12c68f3a6c.js" crossorigin="anonymous" defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="styles.css" rel="stylesheet">
 
