--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/12c68f3a6c.js" crossorigin="anonymous" defer></script>
 
     <link href="styles.css" rel="stylesheet">
