Grammar & responsive updates
– Corrected grammar mistakes
– Added codes to make the website responsive

--- a/Brightwheel.html
+++ b/Brightwheel.html
@@ -90,7 +90,8 @@
             <p>Challenges</p>
             <li>Not all parents are open to share their own or their child's information. How might we provide everyone
                 options to show/hide their information? </li>
-            <li>Parents have a hard time getting to know other parents in-person. It's also hard to know which children belong to which parents.</li>
+            <li>Parents have a hard time getting to know other parents in-person. It's also hard to know which children
+                belong to which parents.</li>
 
 
         </div>
@@ -109,15 +110,16 @@
 
     <div class="content mirror-body">
         I decided to conduct only user interviews since I couldn’t check other competitors (I had to be a parent or
-        staff to be able to use similar apps). I was initially planning on conducting a survey, but I ended up not doing it
-        since all the questions I had were better to ask in user interviews for qualitative data. Also, the problems I
-        was trying to solve needed to have more quality answers rather than quantity answers.
+        staff to be able to use similar apps). I was initially planning on conducting a survey, but I ended up not doing
+        it
+        since all the questions I had were better to ask in user interviews for qualitative data. Also, qualitative data
+        was more important to understand the users in this project.
 
         <p>1:1 User Interviews</p>
         Through user interviews, I was able to learn the concerns and needs of the parents.
         All of the participants were not very concerned about their privacy since their daycare is small. However, I can
         see some parents being concerned about their privacy, and some participants showed concerns about privacy when
-        it comes to a larger scale (e.g. large schools).
+        it comes to a larger schools.
         For that reason, I decided give parents the option to hide their information in the app. Other than
         that, the majority of participants seemed to want to get to know
         other children and parents.
@@ -151,8 +153,7 @@
         <p>Persona</p>
         Through my research, I was able to learn a lot about the users, so I decided to summarize my findings into one
         persona to remember throughout the process. It was really important for me to carefully read through the
-        interview summary as I'm not a mom, and therefore cannot easily empathize with moms.
-        By creating a persona, I was able to remember who I was designing this feature for and what I need to focus on.
+        interview summary since I don't have children. By creating a persona, I was able to remember who I was designing this feature for and what I need to focus on.
 
         <div>
 
@@ -169,8 +170,9 @@
 
         <p>User Flow</p>
         I decided to make a user flow to imagine how the user will think and take actions to complete a task.
-        Even though Brightwheel is an app I use every day, I only see the daycare staff interface; parents see a different view.
-        To understand the users (the parents) better, I first watched some YouTube videos to learn how the interface works.
+        Even though Brightwheel is an app I use every day, I only interact with the staff view, which is different from parents view.
+        To understand the users (the parents) better, I first did some secondary research to learn how the interface
+        works.
         Then, I referred back to my research to make sure that I'm not missing important elements.
 
         <div>
@@ -207,8 +209,7 @@
         <div>
 
             <a href=#img-sketches class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Sketches.jpg"
-                    alt="Sketches">
+                <img class="mirror-content2" src="Brightwheel/Sketches.jpg" alt="Sketches">
             </a>
 
             <a href="#!" class="lightbox" id="img-sketches">
@@ -221,10 +222,10 @@
 
         <p>Mid-Fidelity Wireframes</p>
         I made wireframes before moving on to hi-fidelity design so that I can focus on the flows for the whole app.
-        I made this based on the sketches and screenshots from the Brightwheel app. In order to differentiate the
-        screenshots and new feature skecthes, I kept the existing design in color and made new designs in grayscale.
-        The difficult part of this process was the fact that there exist essentially two people in one app: the child
-        and parent. It took me some time to come up with a system to differentiate which settings a user is trying to edit.
+        I made this based on the sketches and screenshots from the Brightwheel app. The difficult part of this process
+        was the fact that there exist essentially two people in one app: the child
+        and parent. It took me some time to come up with a system to differentiate which settings a user is trying to
+        edit.
         I also focused on putting the privacy settings link somewhere easy to find since it's so important for users.
 
 
@@ -259,11 +260,10 @@
         <p>Hi-Fidelity Responsive Design</p>
         Once I finished the wireframes, I started working on hi-fidelity designs.
         While designing, I paid special attention to match the colors and paradigms in the original design.
-        I made three flows for the parent-parent messaging feature: sending a message request, editing privacy
+        I made three flows for the parent messaging feature: sending a message request, editing privacy
         settings, and checking a message request.
         I didn't make major changes from the wireframes since I mainly followed the design of the original app. The
-        only design that is entirely new to the app is the checking a message request. I did research to find
-        inspiration for how I could make the message request obvious in a way that doesn't disrupt the original
+        only design that is entirely new to the app is the checking a message request. I researched for inspiration for how I could make the message request obvious in a way that doesn't disrupt the original
         design.
         <br><br>
 
@@ -354,7 +354,7 @@
         </div>
 
         <p>Priority Revision</p>
-        Since my main focus is to add a new feature, I wanted to keep the original design as much as possible and
+        My main focus is to add a new feature, so I wanted to keep the original design as much as possible and
         not add a design that stands out from the original.
         <br>
 
@@ -377,7 +377,8 @@
 
         <div>
             <div class="mirror-content">
-                I kept the tagged children panel shown by default to make it more prominent, while still including a "hide" button.
+                I kept the tagged children panel shown by default to make it more prominent, while still including a
+                "hide" button.
             </div>
 
             <div>
@@ -398,7 +399,8 @@
             <div class="mirror-content">
                 Some participants had a hard time finding "display name" since it isn't shown until they
                 deactivate the "name" toggle.
-                I added some help text to inform users how to set a display name when they don't want to share their real
+                I added some help text to inform users how to set a display name when they don't want to share their
+                real
                 name.
             </div>
 
@@ -421,11 +423,13 @@
             <div class="mirror-content">
                 At first I wasn’t sure how to make the topic more obvious so that users would know they have to choose a
                 topic. I referred back to
-                the original design and discovered that it uses purple for certain text and more subtle colors for other text; it also has fewer words.
+                the original design and discovered that it uses purple for certain text and more subtle colors for other
+                text; it also has fewer words.
                 I decided to change the color and remove the word “Topic” to make it
                 both look cleaner and more prominent;
                 I also made the drop down icon larger.<br><br>
-                A few participants mentioned that they didn't know who will receive the request, so I included some explanatory
+                A few participants mentioned that they didn't know who will receive the request, so I included some
+                explanatory
                 text.
             </div>
 
@@ -456,7 +460,8 @@
     </div>
 
     <div class="content mirror-body">
-        <li>It's not easy to empathize with people you are not familiar with–research is an effective means to empathize with and understand those people.</li>
+        <li>It's not easy to empathize with people you are not familiar with–research is an effective means to empathize
+            with and understand those people.</li>
         <li>Don't assume people will understand something you understand–even small things can make people confused and
             frustrated; having explanations is helpful.</li>
         <li>Technology (such as Brightwheel) is a great way to solve problems, yet it can create problems at the
@@ -500,7 +505,7 @@
     </div>
 
 
-    <footer> <small> Hand-crafted by Kotomi</small> </footer> 
+    <footer> <small> Hand-crafted by Kotomi</small> </footer>
 
 
 
