--- a/index.html
+++ b/index.html
@@ -26,14 +26,19 @@
                     <path
                         d="M90.7392 13.717C89.9155 13.9387 85.0686 14.1605 83.8332 18.4055C82.6294 22.6505 85.227 25.9134 87.9198 26.547C90.6442 27.1806 92.7666 26.5787 94.2556 24.5512C95.9029 22.2386 96.283 18.6589 96.283 18.6589L100.528 19.1975C100.528 19.1975 100.148 21.2249 99.5143 23.4741C99.2292 24.5195 97.8353 26.0084 97.5819 26.8638C96.98 28.9863 98.9757 30.3801 100.528 29.4298C102.746 28.0676 103.601 26.4519 104.329 23.5692C104.741 21.9218 105.058 20.8764 104.836 20.4013C104.836 20.4013 108.289 20.8448 108.543 18.3421C108.796 15.8395 105.85 14.9525 105.502 14.9208C105.502 14.9208 106.389 9.25024 103.316 9.18688C100.75 9.12352 100.876 13.8754 100.876 13.8754L96.0929 13.2418C96.0929 13.2418 96.8849 10.4857 95.7762 8.68002C94.8891 7.25446 93.1785 6.68424 89.9789 6.71592C88.0465 6.71592 86.2724 7.91972 86.716 10.1056C87.0644 12.0697 91.1827 12.038 90.8976 11.7846C90.8976 11.7846 91.1193 12.9884 90.7392 13.717ZM91.0877 19.5142C91.0877 20.528 90.7075 21.2883 89.5987 21.1616C88.7434 21.0348 88.5217 19.7677 88.9968 19.0391C89.5037 18.2788 91.0877 18.5322 91.0877 19.5142Z"
                         fill="#608959" />
-                </svg></a>
+                </svg>
+            </a>
 
-            <div class="navlinks">
+            <div><input class="menu-btn" type="checkbox" style="display: none" id="menu-btn" />
+                <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 
-                <a class="navlink" href="about.html">About</a>
-                <a class="navlink" href="work.html">Work</a>
-                <a class="navlink" href="">Resume</a>
-                <a class="navlink" href="contact.html">Contact</a>
+
+                <div class="navlinks">
+                    <a class="navlink" href="about.html">About</a>
+                    <a class="navlink" href="work.html">Work</a>
+                    <a class="navlink" href="">Resume</a>
+                    <a class="navlink" href="contact.html">Contact</a>
+                </div>
             </div>
         </div>
     </div>
@@ -48,9 +53,9 @@
                 </div>I'm Kotomi
                 Cogdill.
             </h1>
-            Billingual &#127471;&#127477;&#127482;&#127480;
+            Bilingual &#127471;&#127477;&#127482;&#127480;
             UX/UI designer based in the SF Bay Area.
-            Creating visually aesthetic designs that bring users <br>
+            Creating visually aesthetic designs that bring users
             happy experience is my new <a class="link" href="https://en.wikipedia.org/wiki/Ikigai">ikigai</a>.<br>
 
 
@@ -76,7 +81,8 @@
 
 
 
-                    <img class="case-study-image" src="img/Mock up brightwheel.png" alt="Brightwheel, add a feature project">
+                    <img class="case-study-image" src="img/Mock up brightwheel.png"
+                        alt="Brightwheel, add a feature project">
 
                 </a>
 
@@ -84,7 +90,8 @@
                     <div class="title-shurui">STUDENT PROJECT</div>
                     <div class="case-study-title">Brightwheel</div>
                     Adding a new parent-parent messaging feature to an existing childcare app.
-                    <div><a class="case-study-cta case-study-cta-button" href="Brightwheel.html">View  case study</a></div>
+                    <div><a class="case-study-cta case-study-cta-button" href="Brightwheel.html">View case study</a>
+                    </div>
                 </div>
 
 
@@ -97,15 +104,18 @@
 
 
 
-                    <img class="case-study-image" src="img/Matcha mock up.png" alt="All about matcha, e-commerce website">
+                    <img class="case-study-image" src="img/Matcha mock up.png"
+                        alt="All about matcha, e-commerce website">
 
                 </a>
 
                 <div>
                     <div class="title-shurui">STUDENT PROJECT</div>
                     <div class="case-study-title">All About Matcha</div>
-                    A responsive e-commerce website that provides online Japanese Tea Ceremony classes and matcha products.
-                    <div><a class="case-study-cta case-study-cta-button" href="all-about-matcha.html">View  case study</a></div>
+                    A responsive e-commerce website that provides online Japanese Tea Ceremony classes and matcha
+                    products.
+                    <div><a class="case-study-cta case-study-cta-button" href="all-about-matcha.html">View case
+                            study</a></div>
                 </div>
 
 
@@ -116,7 +126,7 @@
 
 
 
-    
+
         </div>
 
 
@@ -129,7 +139,7 @@
     </div>
 
 
-   
+
 
 
     <svg class="wave-bottom" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100">
@@ -173,7 +183,7 @@
             </div>
 
         </div>
-        <footer> <small> Hand-crafted by Kotomi</small> </footer> 
+        <footer> <small> Hand-crafted by Kotomi</small> </footer>
 
     </div>
 
