--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
     <div class="nav">
         <div class="nav-content">
-
             <a class="logo" href="/"><svg width="113" height="37" viewBox="0 0 113 37" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -28,11 +27,9 @@
                         fill="#608959" />
                 </svg>
             </a>
-
-            <div><input class="menu-btn" type="checkbox" style="display: none" id="menu-btn" />
+            <div class="menu">
+                <input class="menu-btn" type="checkbox" style="display: none" id="menu-btn" />
                 <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-
-
                 <div class="navlinks">
                     <a class="navlink" href="about.html">About</a>
                     <a class="navlink" href="work.html">Work</a>
