--- a/Brightwheel.html
+++ b/Brightwheel.html
@@ -46,7 +46,7 @@
         <div class="matcha-hero">
             <div>
                 <h1>Brightwheel <br>– Add a feature</h1>
-                <h3>Helping parents get to know other parents at the same daycare.</h3>
+                <h3>Helping daycare parents get to know each other.</h3>
             </div>
 
 
@@ -71,7 +71,7 @@
             <p>Objective</p>
 
             <div>
-                <li>Design a messaging feature that enables parents to communicate with other parents in the app.</li>
+                <li>Design a messaging feature that enables parents to communicate with each other.</li>
                 <li>Discover what privacy concerns parents have and design the app accordingly so that it is safe to
                     use.
                 </li>
@@ -130,9 +130,17 @@
 
         Here is the summary of the major needs/pain points I got from the user interviews.
 
-        <img class="mirror-content2" src="Brightwheel/Interview summary.jpg" alt="Interview summary">
+        <div>
 
+            <a href=#img-interview class="lightbox-link">
+                <img class="mirror-content2" src="Brightwheel/Interview summary.jpg" alt="Interview summary">
+            </a>
 
+            <a href="#!" class="lightbox" id="img-interview">
+                <span style="background-image: url('Brightwheel/Interview\ summary.jpg')"></span>
+            </a>
+
+        </div>
 
 
     </div>
