--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                 <img class="content-image about-image" src="img/kotomigraduation.jpg"
                     alt="Kotomi wearing a Hakama, Japanese traditional clothes, for here graduation">
 
-                <div>
+                <div class="about-text">
 
                     <p>Why UX?</p>
 
