Support translate toggle on devices without hover

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </svg>
             </a>
             <div class="menu">
-                <input class="menu-btn" type="checkbox" style="display: none" id="menu-btn" />
+                <input type="checkbox" style="display: none" id="menu-btn" />
                 <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
                 <div class="navlinks">
                     <a class="navlink" href="about.html">About</a>
@@ -45,10 +45,12 @@
 
         <div>
             <h1>
-                <div class="translate"><span class="greeting japanese">はじめまして､</span><span class="greeting english">Nice
-                        to meet you,</span>
-                </div>I'm Kotomi
-                Cogdill.
+                <input type="checkbox" style="display: none" id="translate-btn" />
+                <label for="translate-btn" class="translate">
+                    <span class="greeting japanese">はじめまして､</span>
+                    <span class="greeting english">Nice to meet you,</span>
+                </label>
+                I'm Kotomi Cogdill.
             </h1>
             Bilingual &#127471;&#127477;&#127482;&#127480;
             UX/UI designer based in the SF Bay Area.
@@ -129,6 +131,7 @@
 
 
     </div>
+
 
 
 
