--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@
 
 
 
-    <div class="work">
+    <div class="work-page">
 
         <div class="content-home">
             <h1>Case Studies</h1>
