Responsive & resume & favicon
– Worked on responsiveness
– Added my resume
Added my favicon

--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -7,7 +7,8 @@
 
 
 
-    <title>All out Matcha case study</title>
+    <title>All About Matcha case study</title>
+    <link rel="shortcut icon" type="img/jpg" href="img/favicon.svg"/>
 </head>
 
 <body>
