--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 
 
     <title>Kotomi Cogdill</title>
+    <link rel="shortcut icon" type="img/jpg" href="img/favicon.svg"/>
 </head>
 
 <body>
@@ -53,7 +54,7 @@
                 </div> <br>
 
 
-                <a class="contact-cta cta-button" href="mailto:hi@kotomi.cogdill.com">Send an email</a>
+                <a class="contact-cta cta-button" href="mailto:hi@kotomicogdill.com">Send an email</a>
 
 
             </div>
@@ -100,7 +101,7 @@
 
 
 
-    <footer> <small>&copy; Hand-crafted by Kotomi</small> </footer>
+    <footer> <small> Hand-crafted by Kotomi</small> </footer>
 </body>
 
 
