--- a/work.html
+++ b/work.html
@@ -8,6 +8,7 @@
 
 
     <title>Kotomi Cogdill Work</title>
+    <link rel="shortcut icon" type="img/jpg" href="img/favicon.svg" />
 </head>
 
 <body>
@@ -31,7 +32,7 @@
                 <div class="navlinks">
                     <a class="navlink" href="about.html">About</a>
                     <a class="navlink" href="work.html">Work</a>
-                    <a class="navlink" href="">Resume</a>
+                    <a class="navlink" href="img/Kotomi Cogdill Resume 2020.pdf">Resume</a>
                     <a class="navlink" href="contact.html">Contact</a>
                 </div>
             </div>
@@ -39,14 +40,34 @@
     </div>
 
 
-
-    <div class="work-page">
+    <div class="work">
 
         <div class="content-home">
-            <h1>Case Studies</h1>
+            <h2>Case Studies</h2>
+
+            <div class="case-study">
+                <a href="Brightwheel.html">
 
 
-            <div class="case-study-page">
+
+                    <img class="case-study-image" src="img/Mock up brightwheel.png"
+                        alt="Brightwheel, add a feature project">
+
+                </a>
+
+                <div>
+                    <div class="title-shurui">STUDENT PROJECT</div>
+                    <div class="case-study-title">Windows to Japan</div>
+                    TEXT
+                    <div><a class="case-study-cta case-study-cta-button" href="Brightwheel.html">View case study</a>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+            <div class="case-study">
                 <a href="Brightwheel.html">
 
 
@@ -69,7 +90,7 @@
             </div>
 
 
-            <div class="case-study-page">
+            <div class="case-study">
                 <a href="all-about-matcha.html">
 
 
@@ -105,7 +126,6 @@
 
 
 
-   
 
 
     <svg class="wave-bottom" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100">
@@ -150,7 +170,7 @@
 
         </div>
 
-        <footer> <small> Hand-crafted by Kotomi</small> </footer> 
+        <footer> <small> Hand-crafted by Kotomi</small> </footer>
 
     </div>
 
