--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 
 
     <title>Kotomi Cogdill About Page</title>
+    <link rel="shortcut icon" type="img/jpg" href="img/favicon.svg" />
 </head>
 
 <body>
@@ -31,7 +32,7 @@
                 <div class="navlinks">
                     <a class="navlink" href="about.html">About</a>
                     <a class="navlink" href="work.html">Work</a>
-                    <a class="navlink" href="">Resume</a>
+                    <a class="navlink" href="img/Kotomi Cogdill Resume 2020.pdf">Resume</a>
                     <a class="navlink" href="contact.html">Contact</a>
                 </div>
             </div>
@@ -124,7 +125,7 @@
             <li>Travel</li>
         </div>
 
-      
+
     </div>
 
 
@@ -161,7 +162,7 @@
         </div>
 
     </div>
-    <footer> <small>Hand-crafted by Kotomi</small> </footer> 
+    <footer> <small>Hand-crafted by Kotomi</small> </footer>
 
 </body>
 
