--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 
     <title>Kotomi Cogdill</title>
+    <link rel="shortcut icon" type="img/jpg" href="img/favicon.svg"/>
+
 </head>
 
 <body>
@@ -33,7 +35,7 @@
                 <div class="navlinks">
                     <a class="navlink" href="about.html">About</a>
                     <a class="navlink" href="work.html">Work</a>
-                    <a class="navlink" href="">Resume</a>
+                    <a class="navlink" href="img/Kotomi Cogdill Resume 2020.pdf">Resume</a>
                     <a class="navlink" href="contact.html">Contact</a>
                 </div>
             </div>
