Added images & responsive updates
– Added Windows to Japan mock up image
– Worked on responsive screens

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
             </h1>
             Bilingual &#127471;&#127477;&#127482;&#127480;
             UX/UI designer based in the SF Bay Area.
-            Creating visually aesthetic designs that bring users
-            happy experience is my new <a class="link" href="https://en.wikipedia.org/wiki/Ikigai">ikigai</a>.<br>
+            I create thoughtful, aesthetic designs to bring users happy experiences.<br>
 
 
 
@@ -76,6 +75,27 @@
         <div class="content-home">
             <h2>Case Studies</h2>
 
+            <div class="case-study">
+                <a href="Windows to Japan.html">
+
+
+
+                    <img class="case-study-image" src="img/wtj mock up.png"
+                        alt="Windows to Japan, an end-end application">
+
+                </a>
+
+                <div>
+                    <div class="title-shurui">STUDENT PROJECT</div>
+                    <div class="case-study-title">Windows to Japan</div>
+                    Adding a new parent-parent messaging feature to an existing childcare app.
+                    <div><a class="case-study-cta case-study-cta-button" href="Windows to Japan.html">View case study</a>
+                    </div>
+                </div>
+
+
+
+            </div>
 
             <div class="case-study">
                 <a href="Brightwheel.html">
