--- a/work.html
+++ b/work.html
@@ -46,19 +46,19 @@
             <h2>Case Studies</h2>
 
             <div class="case-study">
-                <a href="Brightwheel.html">
+                <a href="Windows to Japan.html">
 
 
 
-                    <img class="case-study-image" src="img/Mock up brightwheel.png"
-                        alt="Brightwheel, add a feature project">
+                    <img class="case-study-image" src="img/wtj mock up.png"
+                        alt="Windows to Japan, end to end application">
 
                 </a>
 
                 <div>
                     <div class="title-shurui">STUDENT PROJECT</div>
                     <div class="case-study-title">Windows to Japan</div>
-                    TEXT
+                    An end-end application that replaces physical itinerary to digital itinerary.
                     <div><a class="case-study-cta case-study-cta-button" href="Brightwheel.html">View case study</a>
                     </div>
                 </div>
