--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div>
                     <div class="title-shurui">STUDENT PROJECT</div>
                     <div class="case-study-title">Windows to Japan</div>
-                    Adding a new parent-parent messaging feature to an existing childcare app.
+                    An end-end application that replaces your physical itinerary with a digital one..
                     <div><a class="case-study-cta case-study-cta-button" href="Windows to Japan.html">View case study</a>
                     </div>
                 </div>
