--- a/work.html
+++ b/work.html
@@ -58,7 +58,7 @@
                 <div>
                     <div class="title-shurui">STUDENT PROJECT</div>
                     <div class="case-study-title">Windows to Japan</div>
-                    An end-end application that replaces physical itinerary to digital itinerary.
+                    An end-end application that replaces your physical itinerary with a digital one.
                     <div><a class="case-study-cta case-study-cta-button" href="Brightwheel.html">View case study</a>
                     </div>
                 </div>
